Lab-06_1_Softmax_classification_s2_PyTorch

--- a/PyTorch_Lab-06_1_Softmax_classification.ipynb
+++ b/PyTorch_Lab-06_1_Softmax_classification.ipynb
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x1be7fe7d9b0>"
+       "<torch._C.Generator at 0x25d1c61d9b0>"
       ]
      },
      "execution_count": 2,
@@ -127,7 +127,7 @@
     {
      "data": {
       "text/plain": [
-       "' softmax 함수 적용시 dim=0, 1 차이를 확인하기 위한 코드\\nimport torch\\nimport torch.nn.functional as F\\n\\n# 입력 텐서 생성 (2x3 행렬)\\nz = torch.tensor([[1.0, 2.0, 3.0],\\n                  [4.0, 5.0, 6.0]])\\n\\n# 1️⃣ dim=0 (열 방향 소프트맥스)\\nsoftmax_dim0 = F.softmax(z, dim=0)\\nsum_dim0 = softmax_dim0.sum(dim=0)  # 각 열의 합 확인\\n\\n# 2️⃣ dim=1 (행 방향 소프트맥스)\\nsoftmax_dim1 = F.softmax(z, dim=1)\\nsum_dim1 = softmax_dim1.sum(dim=1)  # 각 행의 합 확인\\n\\n# 출력\\nprint(\"=== Softmax(dim=0) 적용 결과 ===\")\\nprint(softmax_dim0)\\nprint(\"각 열의 합:\", sum_dim0)\\n\\nprint(\"\\n=== Softmax(dim=1) 적용 결과 ===\")\\nprint(softmax_dim1)\\nprint(\"각 행의 합:\", sum_dim1)\\n'"
+       "' # softmax 함수 적용시 dim=0, 1 차이를 확인하기 위한 코드\\nimport torch\\nimport torch.nn.functional as F\\n\\n# 입력 텐서 생성 (2x3 행렬)\\nz = torch.tensor([[1.0, 2.0, 3.0],\\n                  [4.0, 5.0, 6.0]])\\n\\n# 1️⃣ dim=0 (열 방향 소프트맥스)\\nsoftmax_dim0 = F.softmax(z, dim=0)\\nsum_dim0 = softmax_dim0.sum(dim=0)  # 각 열의 합 확인\\n\\n# 2️⃣ dim=1 (행 방향 소프트맥스)\\nsoftmax_dim1 = F.softmax(z, dim=1)\\nsum_dim1 = softmax_dim1.sum(dim=1)  # 각 행의 합 확인\\n\\n# 출력\\nprint(\"=== Softmax(dim=0) 적용 결과 ===\")\\nprint(softmax_dim0)\\nprint(\"각 열의 합:\", sum_dim0)\\n\\nprint(\"\\n=== Softmax(dim=1) 적용 결과 ===\")\\nprint(softmax_dim1)\\nprint(\"각 행의 합:\", sum_dim1)\\n'"
       ]
      },
      "execution_count": 6,
@@ -136,7 +136,7 @@
     }
    ],
    "source": [
-    "''' softmax 함수 적용시 dim=0, 1 차이를 확인하기 위한 코드\n",
+    "''' # softmax 함수 적용시 dim=0, 1 차이를 확인하기 위한 코드\n",
     "import torch\n",
     "import torch.nn.functional as F\n",
     "\n",
@@ -179,14 +179,15 @@
     }
    ],
    "source": [
-    "z = torch.rand(3, 5, requires_grad=True)    # class 5개, sample 3개\n",
+    "# z는 logit 값(softmax 함수에 들어가기 전 값)\n",
+    "z = torch.rand(3, 5, requires_grad=True)    # class 5개, sample 3개/requires_grad=True로 역전파 가능하도록 설정\n",
     "hypothesis = F.softmax(z, dim=1)    # dim=1은 두번째 dimension에 대해서 softmax를 수행한다는 뜻\n",
-    "print(hypothesis)\n",
+    "print(hypothesis)                   # hypothesis는 모델이 예측한 확률 값\n",
     "\n",
     "# dim=0이면 열 방향(세로)으로 softmax 적용\n",
     "# dim=1이면 행 방향(가로)으로 softmax 적용->각 행의 원소 합이 1이 되는 확률 분포 생성 \n",
     "\n",
-    "# print(hypothesis.sum(dim=0)) 으로 확인해보자 dim=1로 하면 1이 안됨"
+    "# print(hypothesis.sum(dim=0)) 으로 확인해보자 dim=1로 하면 합이 1이 안됨"
    ]
   },
   {
@@ -236,20 +237,26 @@
     }
    ],
    "source": [
-    "y_one_hot = torch.zeros_like(hypothesis)\n",
-    "y_one_hot.scatter_(1, y.unsqueeze(1), 1)"
+    "# one-hot 인코딩_one-hot vector로 만들기\n",
+    "y_one_hot = torch.zeros_like(hypothesis)  # y_one_hot 텐서 초기화 (모든 값 0)\n",
+    "y_one_hot.scatter_(1, y.unsqueeze(1), 1)  # 정답 라벨에 1 할당 (One-hot)\n",
+    "\n",
+    "# scatter_(dim, index, value) → 특정 위치에 값을 in-place로 채움\n",
+    "# dim=1 → 각 샘플(행)에서 특정 클래스(열)에 값을 채움\n",
+    "# y.unsqueeze(1) → y의 차원을 (3,) → (3,1)로 변환해 인덱스로 사용\n",
+    "# 1 → 해당 인덱스 위치에 1을 채움 (One-Hot Encoding)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(1.4689, grad_fn=<MeanBackward0>)\n"
+      "tensor(36.7000, grad_fn=<MeanBackward0>)\n"
      ]
     }
    ],
@@ -269,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +287,7 @@
        "        [-1.5025, -1.6165, -1.4586, -1.8360, -1.6776]], grad_fn=<LogBackward0>)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +311,7 @@
        "       grad_fn=<LogSoftmaxBackward0>)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,16 +330,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(1.4689, grad_fn=<MeanBackward0>)"
+       "tensor(36.7000, grad_fn=<MeanBackward0>)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,16 +351,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(1.4689, grad_fn=<NllLossBackward0>)"
+       "tensor(1.6682, grad_fn=<NllLossBackward0>)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,16 +379,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(1.4689, grad_fn=<NllLossBackward0>)"
+       "tensor(1.6682, grad_fn=<NllLossBackward0>)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,24 +553,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch    0/1000 Cost: 1.849513\n",
-      "Epoch  100/1000 Cost: 0.689894\n",
-      "Epoch  200/1000 Cost: 0.609259\n",
-      "Epoch  300/1000 Cost: 0.551218\n",
-      "Epoch  400/1000 Cost: 0.500141\n",
-      "Epoch  500/1000 Cost: 0.451947\n",
-      "Epoch  600/1000 Cost: 0.405051\n",
-      "Epoch  700/1000 Cost: 0.358733\n",
-      "Epoch  800/1000 Cost: 0.312912\n",
-      "Epoch  900/1000 Cost: 0.269522\n",
-      "Epoch 1000/1000 Cost: 0.241922\n"
+      "Epoch    0/1000 Cost: 4.661125\n",
+      "Epoch  100/1000 Cost: 0.711834\n",
+      "Epoch  200/1000 Cost: 0.630354\n",
+      "Epoch  300/1000 Cost: 0.573769\n",
+      "Epoch  400/1000 Cost: 0.523962\n",
+      "Epoch  500/1000 Cost: 0.476843\n",
+      "Epoch  600/1000 Cost: 0.430888\n",
+      "Epoch  700/1000 Cost: 0.385375\n",
+      "Epoch  800/1000 Cost: 0.339987\n",
+      "Epoch  900/1000 Cost: 0.295070\n",
+      "Epoch 1000/1000 Cost: 0.254579\n"
      ]
     }
    ],
@@ -584,27 +591,6 @@
     "            epoch, nb_epochs, cost.item()\n",
     "        ))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
