--- a/PyTorch_Lab-07_1_Tips.ipynb
+++ b/PyTorch_Lab-07_1_Tips.ipynb
@@ -39,7 +39,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x21b7f8ad9b0>"
+       "<torch._C.Generator at 0x187ff6ed9b0>"
       ]
      },
      "execution_count": 2,
@@ -75,6 +75,7 @@
     "                             [1, 7, 7]\n",
     "                            ])\n",
     "y_train = torch.LongTensor([2, 2, 2, 1, 1, 1, 0, 0])\n",
+    "# PyTorch에서 클래스 레이블(Label)을 표현할 때 일반적으로 LongTensor를 사용\n",
     "\n",
     "x_test = torch.FloatTensor([[2, 1, 1], [3, 1, 2], [3, 3, 4]])\n",
     "y_test = torch.LongTensor([2, 2, 2])"
@@ -129,7 +130,6 @@
     "    nb_epochs = 20\n",
     "    for epoch in range(nb_epochs):\n",
     "        prediction = model(x_train)\n",
-    "\n",
     "        cost = F.cross_entropy(prediction, y_train)\n",
     "\n",
     "        optimizer.zero_grad()\n",
@@ -156,7 +156,13 @@
     "\n",
     "    print('Accuracy: {}% Cost: {:.6f}'.format(\n",
     "        correct_count / len(y_test) * 100, cost.item()\n",
-    "    ))"
+    "    ))\n",
+    "\n",
+    "# .max(dim=1)는: prediction.max(1) 로 각 행(row)에서 가장 큰 값을 찾고\n",
+    "# prediction.max(1)[1] 로 두 번째 값인 \"최대값의 인덱스\" \n",
+    "# (즉, 예측된 클래스)를 가져온다는 의미 \n",
+    "# prediction.max(1)[1] → 가장 높은 logit 값을 가진 클래스 인덱스 추출\n",
+    "# prediction.max(1)[1]은 각 샘플에서 가장 높은 logit 값을 가진 클래스의 인덱스를 반환"
    ]
   },
   {
@@ -539,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +612,7 @@
     "        prediction = model(x_train)\n",
     "        cost = F.mse_loss(prediction, y_train)\n",
     "        \n",
-    "        # l2 norm 계산하고 cost에 더해준다_l2 regularization\n",
+    "        # l2 norm 계산하고 cost에 더해준다_\"l2 regularization\"\n",
     "        l2_reg = 0\n",
     "        for param in model.parameters():\n",
     "            l2_reg += torch.norm(param)\n",
